--- a/App_Qt/TV_Tactile/mainwindow.ui
+++ b/App_Qt/TV_Tactile/mainwindow.ui
@@ -48,6 +48,9 @@ background-repeat: none;
     <property name="text">
      <string/>
     </property>
+    <property name="flat">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QPushButton" name="BoutonAppGalerie">
     <property name="geometry">
