--- a/App_Qt/TV_Tactile/imagebouton.qrc
+++ b/App_Qt/TV_Tactile/imagebouton.qrc
@@ -11,5 +11,6 @@
         <file>galerie.png</file>
         <file>visite.png</file>
         <file>retour.png</file>
+        <file>Logo_CIP_horizontal_res_fond.jpg</file>
     </qresource>
 </RCC>
