--- a/App_Qt/TV_Tactile/configwindow.ui
+++ b/App_Qt/TV_Tactile/configwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>253</width>
-    <height>147</height>
+    <width>332</width>
+    <height>203</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QSpinBox" name="spinBox">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>60</y>
+     <x>210</x>
+     <y>70</y>
      <width>47</width>
      <height>29</height>
     </rect>
@@ -26,8 +26,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>60</y>
+     <x>50</x>
+     <y>70</y>
      <width>131</width>
      <height>31</height>
     </rect>
@@ -39,14 +39,24 @@
   <widget class="QPushButton" name="bRetour">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>100</y>
+     <x>210</x>
+     <y>120</y>
      <width>51</width>
      <height>24</height>
     </rect>
    </property>
    <property name="text">
     <string>OK</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBox">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>110</y>
+     <width>111</width>
+     <height>28</height>
+    </rect>
    </property>
   </widget>
  </widget>
